--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap');
 @import "./components/about";
 @import "./components/advantages";
+@import "./components/contact";
+@import "./components/map-modal";
+@import "./components/form-modal";
 @import "./components/footer";
 
 * {
@@ -9,12 +12,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 .container {
     width: 1200px;
     padding: 0 15px;
     margin: auto;
 }
-li{
+
+li {
     list-style-type: none;
 }
-
