--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -9,8 +9,7 @@ a {
     display: block;
 }
 
-// fin estilos globales.
-
+// Container listo para Responsive
 .container {
     min-width: 320px;
     max-width: 1200px;
@@ -19,6 +18,8 @@ a {
     margin-right: auto;
     margin-left: auto;
 }
+
+// fin estilos globales.
 
 .contact {
     font-family: 'DM Sans', sans-serif;
@@ -117,6 +118,8 @@ a {
         gap: 12px;
     }
 }
+
+// Sección para Responsive
 
 @media only screen and (min-width:768px) and (max-width: 1199px) {
     .container {
