--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,7 +1,14 @@
 $primary-text-color: #000000;
 $title-text-color: #D41443;
-$accent-color: #FFA5BA;;
+$accent-color: #FFA5BA;
+;
 $primary-white-color: #ffffff;
 $second-text: #907E82;
 $background: #FFF5F6;
 $hover-button: #ECEBEB;
+$card-border: #E5E5E57E;
+$contact-orange-bg: #F0D1A5;
+$contact-green-bg: #C2E297;
+$contact-item-border: #E1E1E1;
+$label-border: #d41444b0;
+$input-border: #00000088;
