--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -1,3 +1,5 @@
+@import "../utils/variables";
+
 // Ojo!!! aqui puse estilos Globales.
 
 ul {
@@ -23,12 +25,11 @@ a {
 
 .contact {
     font-family: 'DM Sans', sans-serif;
-    background-color: lightgray;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.86;
     letter-spacing: 0.04em;
-    background-image: linear-gradient(to bottom, #ffffff 16%, #fff5f6 16%);
+    background-image: linear-gradient(to bottom, $primary-white-color 16%, $background 16%);
 
     &__list {
         display: flex;
@@ -40,9 +41,9 @@ a {
         flex-basis: calc((100% - 64px) / 3);
         padding: 40px;
         width: 368px;
-        background-color: #ffffff;
+        background-color: $primary-white-color;
         border-radius: 24px;
-        border: 1px solid #e5e5e57e;
+        border: 1px solid $card-border;
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
@@ -58,14 +59,14 @@ a {
         width: 75px;
         height: 28px;
         margin-bottom: 32px;
-        color: #ffffff;
+        color: $primary-white-color;
         text-transform: uppercase;
-        background-color: #f0d1a5;
+        background-color: $contact-orange-bg;
         border-radius: 6px;
 
         &--green {
             width: 138px;
-            background-color: #c2e297;
+            background-color: $contact-green-bg;
         }
     }
 
@@ -83,18 +84,18 @@ a {
         }
 
         &:not(:last-child) {
-            border-bottom: 1px solid #e1e1e1;
+            border-bottom: 1px solid $contact-item-border;
         }
     }
 
     &__menu {
         margin-top: 8px;
         line-height: 1.5;
-        color: #907e82;
+        color: $second-text;
     }
 
     &__time {
-        color: #ffa5ba;
+        color: $accent-color;
 
         &--margin {
             margin-bottom: 12px;
@@ -103,12 +104,12 @@ a {
 
     &__link {
         line-height: 1.5;
-        color: #907e82;
+        color: $second-text;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
         &:focus {
-            color: #d41443;
+            color: $title-text-color;
         }
     }
 
@@ -127,7 +128,7 @@ a {
     }
 
     .contact {
-        background-image: linear-gradient(to bottom, #ffffff 48%, #fff5f6 48%);
+        background-image: linear-gradient(to bottom, $primary-white-color 48%, $background 48%);
 
         &__item {
             padding-left: 32px;
@@ -142,7 +143,6 @@ a {
 
         &__menu {
             margin-top: 12px;
-            color: #907e82;
         }
     }
 }
@@ -155,7 +155,7 @@ a {
     }
 
     .contact {
-        background-image: linear-gradient(to bottom, #ffffff 21.5%, #fff5f6 21.5%);
+        background-image: linear-gradient(to bottom, $primary-white-color 21.5%, $background 21.5%);
 
         &__list {
             flex-direction: column;
