--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,8 @@
 @import "node_modules/modern-normalize/modern-normalize.css";
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap');
+@import "./utils/mixin";
+@import "./utils/variables";
+@import "./components/header";
 @import "./components/about";
 @import "./components/advantages";
 @import "./components/contact";
