--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,7 +1,8 @@
 $primary-text-color: #000000;
+ $color-fondo-header: #ffb8ca;
 $title-text-color: #D41443;
 $accent-color: #FFA5BA;
-;
+
 $primary-white-color: #ffffff;
 $second-text: #907E82;
 $background: #FFF5F6;
