--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,5 +1,5 @@
 $primary-text-color: #000000;
- $color-fondo-header: #ffb8ca;
+ $background-header-color: #ffb8ca;
 $title-text-color: #D41443;
 $accent-color: #FFA5BA;
 
