--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,3 +22,16 @@
 li {
     list-style-type: none;
 }
+
+@media screen and (min-width:50px) and (max-width:767px){
+    .container{
+    width: 320px;
+    padding: 0 20px;
+    }
+}
+@media screen and (min-width:768px) and (max-width:1199px) {
+    .container{
+        width: 768px;
+        padding: 0 32px;
+    }
+}
