responsive tablet and mobile for products section

--- a/assets/scss/components/_products03.scss
+++ b/assets/scss/components/_products03.scss
@@ -9,11 +9,10 @@ img {
     font-family: "Titan One", cursive;
     font-weight: 400;
     font-size: 30px;
-    line-height: 34px;
+    line-height: 1.13;
     letter-spacing: 0.04em;
     text-align: center;
     color: $accent-color;
-    size: 30px;
     text-transform: uppercase;
   }
   &__title {
@@ -22,7 +21,7 @@ img {
     text-align: center;
     font-weight: 400;
     font-size: 58px;
-    line-height: 66px;
+    line-height: 1.14;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $title-text-color;
@@ -60,9 +59,10 @@ img {
   &__subtitle {
     font-family: "Titan One", cursive;
     font-style: normal;
-    line-height: 34px;
+    line-height: 1.13;
     text-align: center;
     padding: 32px;
+    font-size: 30px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $primary-white-color;
@@ -83,5 +83,75 @@ img {
   &__animation:hover,
   &__animation:focus {
     transform: rotate(-90deg);
+  }
+}
+@media screen and (min-width: 50px) and (max-width: 767px) {
+  .product {
+    &__quality {
+      font-size: 18px;
+      text-align: center;
+    }
+    &__title {
+      font-size: 34px;
+      text-align: center;
+      margin-bottom: 140px;
+    }
+    &__variety {
+      flex-direction: column;
+      gap: 140px;
+    }
+    &__card {
+      width: 280px;
+      padding-top: 160px;
+      padding-bottom: 40px;
+    }
+    &__img {
+      position: absolute;
+      top: -24%;
+      width: 280px;
+      height: 280px;
+    }
+    &__subtitle {
+      font-size: 20px;
+    }
+    &__content {
+      font-size: 14px;
+    }
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .product {
+    &__quality {
+      font-size: 26px;
+      text-align: center;
+    }
+    &__title {
+      font-size: 48px;
+      text-align: center;
+      margin-bottom: 158px;
+    }
+    &__variety {
+      gap: 16px;
+    }
+    &__card {
+      width: 224px;
+      padding-left: 18px;
+      padding-right: 18px;
+      padding-top: 118px;
+      padding-bottom: 40px;
+    }
+    &__img {
+      position: absolute;
+      top: -24%;
+      width: 224px;
+      height: 224px;
+    }
+    &__subtitle {
+      font-size: 20px;
+    }
+    &__content {
+      font-size: 14px;
+      line-height: 1.76;
+    }
   }
 }
