--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -2,7 +2,7 @@
 
 .section--about{
     background-color: $background;
-    background-image: url("../../images/milk.png");
+    background-image: url("../images/milk.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -32,8 +32,89 @@
     line-height: 1.145;
     color: $title-text-color;
 }
+.p--tittle:hover,
+.h2--tittle:hover{
+    animation: animacion-letter-spacing 1.5s forwards;
+}
+@keyframes animacion-letter-spacing {
+  0% {
+    letter-spacing: normal;
+  }
+  5%{
+    letter-spacing: 0.5em;    
+  }
+  10%{
+      letter-spacing: 0.47em;
+  }
+  15%{
+      letter-spacing: 0.45em;
+  }
+  20%{
+      letter-spacing: 0.42;
+  }
+  25%{
+      letter-spacing: 0.4em;
+  }
+  30%{
+      letter-spacing: 0.37em;
+  }
+  35%{
+      letter-spacing: 0.35em;
+  }
+  40%{
+      letter-spacing: 0.32em;
+  }
+  45%{
+      letter-spacing: 0.3em;
+  }
+  50% {
+      letter-spacing: 0.27em;
+  }
+  55%{
+      letter-spacing: 0.25em;
+  }
+  60%{
+      letter-spacing: 0.22em;
+  }
+  65%{
+      letter-spacing: 0.2em;
+    }
+70%{
+    letter-spacing: 0.17em;
+}
+75%{
+    letter-spacing: 0.15em;
+    }
+80%{
+    letter-spacing: 0.12em;
+    }
+85%{
+    letter-spacing: 0.1em;
+    }
+90%{
+    letter-spacing: 0.07em;
+    }
+95%{
+    letter-spacing: 0.05em;
+  }
+
+  100% {
+    letter-spacing: normal;
+  }
+}
 .img{
     padding-right: 99px;
+}
+.img:hover{
+    animation: rotateOnce 5s forwards;
+}
+@keyframes rotateOnce {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 .div__about-down{
     display: flex;
@@ -47,6 +128,7 @@
     line-height: 1.76;
     width: 400px;
     padding-bottom: 20px;
+    transition: transform 0.3s ease;
 }
 .div__p--secondary{
     color: $second-text;
@@ -57,6 +139,11 @@
     line-height: 1.94;
     width: 400px;
     padding-bottom: 40px;
+    transition: transform 0.3s ease;
+}
+.div__p--principal:hover,
+.div__p--secondary:hover{
+    transform: scale(1.2);
 }
 .button--about{
     color: $title-text-color;
@@ -72,9 +159,11 @@
     border-radius: 20px;
     background-color: $primary-white-color;
     cursor: pointer;
+    transition: transform 0.3s ease;
 }
 .button--about:hover{
     background-color: $hover-button;
+    transform: scale(1.2);
 }
 .button--about:focus{
     background-color: $hover-button;
@@ -121,6 +210,13 @@
     font-size: 34px;
     line-height: 1.145;
     }
+    .section--about{
+        background-image: none;
+        background-image: url("../images/milkx2.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 90% 80%;
+    }
 }
 @media screen and (min-width:768px) and (max-width:1199px){
     .img{
@@ -137,5 +233,8 @@
     }
     .div--text{
         padding-top: 0;
+    }
+    .section--about{
+        background-image: none;
     }
 }
