STAR-00 Fixing errors with svg files and adding space after products section

--- a/assets/scss/components/_products.scss
+++ b/assets/scss/components/_products.scss
@@ -5,6 +5,7 @@ img {
   font-family: Titan One;
 }
 .product {
+  margin-bottom: 60px;
   &__quality {
     font-family: "Titan One", cursive;
     font-weight: 400;
