--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,7 @@
 @import "./components/map-modal";
 @import "./components/form-modal";
 @import "./components/footer";
-@import "components/products03";
+@import "components/products";
 
 * {
   padding: 0;
