--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap");
 @import "./components/about";
 @import "./components/advantages";
+@import "./components/reviews";
 @import "./components/contact";
 @import "./components/map-modal";
 @import "./components/form-modal";
