--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -1,28 +1,5 @@
 @import "../utils/variables";
 
-// Ojo!!! aqui puse estilos Globales.
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    display: block;
-}
-
-// Container listo para Responsive
-.container {
-    min-width: 320px;
-    max-width: 1200px;
-    padding-right: 16px;
-    padding-left: 16px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-// fin estilos globales.
-
 .contact {
     font-family: 'DM Sans', sans-serif;
     font-weight: 500;
@@ -147,7 +124,7 @@ a {
     }
 }
 
-@media only screen and (min-width:320px) and (max-width: 767px) {
+@media only screen and (min-width:50px) and (max-width: 767px) {
     .container {
         width: 320px;
         padding-left: 20px;
@@ -185,6 +162,11 @@ a {
 
         &__menu {
             margin-top: 8px;
+        }
+
+        &__btn {
+            flex-direction: column;
+            align-items: center;
         }
 
     }
