--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,6 +1,7 @@
 $primary-text-color: #000000;
 $title-text-color: #d41443;
 $accent-color: #ffa5ba;
+$background-header-color: #ffb8ca;
 $primary-white-color: #ffffff;
 $second-text: #907e82;
 $background: #fff5f6;
