--- a/assets/scss/components/_contact.scss
+++ b/assets/scss/components/_contact.scss
@@ -49,6 +49,7 @@ a {
         &:hover,
         &:focus {
             box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+            cursor: pointer;
         }
     }
 
